# DECENT-Network

./: .bintray.json  .gitignore  .gitmodules  .travis.yml  Brewfile  CMakeLists.txt  CMakeSettings.json  DCore.service  Doxyfile  LICENSE.MIT  LICENSE.md  LICENSES-3RD-PARTY.md  README.md  TERMS.md  appveyor.yml  genesis.json  install.sh  install_manifest.txt  update.sh
libraries/: CMakeLists.txt  buying_object.cpp  buying_object.hpp  jsondiff-CMakeLists.txt  uvm-CMakeLists.txt
libraries/app/: CMakeLists.txt  api.cpp  application.cpp  balance.cpp  database_api.cpp  impacted.cpp  plugin.cpp  stdafx.h
libraries/chain/: CMakeLists.txt  account_evaluator.cpp  account_object.cpp  assert_evaluator.cpp  asset_evaluator.cpp  asset_object.cpp  block_database.cpp  buying_object.cpp  committee_member_evaluator.cpp  confidential_evaluator.cpp  content_object.cpp  contract.cpp  contract_engine.cpp  contract_engine_builder.cpp  contract_entry.cpp  contract_evaluate.cpp  custom_evaluator.cpp  database.cpp  db_balance.cpp  db_block.cpp  db_contract_trx.cpp  db_debug.cpp  db_decent.cpp  db_getter.cpp  db_init.cpp  db_maint.cpp  db_management.cpp  db_market.cpp  db_miner_schedule.cpp  db_update.cpp  decent_evaluator.cpp  evaluator.cpp  fork_database.cpp  get_config.cpp  hardfork.cpp  index.cpp  market_evaluator.cpp  message_object.cpp  miner_evaluator.cpp  native_contract.cpp  (+20 more)
libraries/chain/CMakeModules/: FindPBC.cmake
libraries/chain/hardfork.d/: 1.hf  2.hf  3.hf
libraries/chain/protocol/: account.cpp  address.cpp  assert.cpp  asset.cpp  asset_ops.cpp  block.cpp  custom.cpp  decent.cpp  fee_schedule.cpp  memo.cpp  miner.cpp  non_fungible_token.cpp  operations.cpp  proposal.cpp  referendum.cpp  subscription.cpp  transaction.cpp  transfer.cpp  types.cpp  vote.cpp  withdraw_permission.cpp  witness.cpp
libraries/config/: CMakeLists.txt  decent_log_config.cpp
libraries/contrib/: CMakeLists.txt
libraries/contrib/pbc/: .gitignore
libraries/db/: CMakeLists.txt  index.cpp  object_database.cpp  undo_database.cpp
libraries/deterministic_openssl_rand/: CMakeLists.txt  deterministic_openssl_rand.cpp
libraries/egenesis/: CMakeLists.txt  egenesis_decent.cpp  embed_genesis.cpp
libraries/encrypt/: CMakeLists.txt  custodyutils.cpp  encryptionutils.cpp  test_encryption_utils.cpp  test_pbc_benchmark.cpp
libraries/monitoring/: CMakeLists.txt  monitoring.cpp  monitoring_fc.cpp
libraries/net/: CMakeLists.txt  message_oriented_connection.cpp  node.cpp  peer_connection.cpp  peer_database.cpp  stcp_socket.cpp
libraries/p2p/: CMakeLists.txt  node.cpp
libraries/package/: CMakeLists.txt  aes_filter.hpp  detail.cpp  detail.hpp  ipfs_check.cpp  ipfs_transfer.cpp  ipfs_transfer.hpp  local.cpp  local.hpp  package.cpp  package_manager_test.cpp  sandbox.cpp  torrent_transfer.cpp  torrent_transfer.hpp
libraries/plugins/: CMakeLists.txt
libraries/plugins/account_history/: CMakeLists.txt  account_history_plugin.cpp
libraries/plugins/debug_miner/: CMakeLists.txt  debug_api.cpp  debug_miner.cpp
libraries/plugins/debug_witness/: CMakeLists.txt  debug_api.cpp
libraries/plugins/delayed_node/: CMakeLists.txt  delayed_node_plugin.cpp
libraries/plugins/elasticsearch/: CMakeLists.txt  adaptor.cpp  adaptor.hpp  elasticsearch_plugin.cpp
libraries/plugins/market_history/: CMakeLists.txt
libraries/plugins/messaging/: CMakeLists.txt  messaging.cpp
libraries/plugins/miner/: CMakeLists.txt  miner.cpp
libraries/plugins/seeding/: CMakeLists.txt  seeding.cpp  seeding_plugin.cpp
libraries/plugins/transaction_history/: CMakeLists.txt  transaction_history_plugin.cpp
libraries/plugins/witness/: CMakeLists.txt  witness.cpp
libraries/time/: CMakeLists.txt
libraries/utilities/: CMakeLists.txt  about.cpp  decent_config.cpp  dirhelper.cpp  git_revision.cpp.in  ipfs_check.cpp  json.cpp  keys_generator.cpp  string_escape.cpp  time.cpp  words.cpp
libraries/wallet/: CMakeLists.txt  Doxyfile.in  api_documentation_standin.cpp  generate_api_documentation.pl  operation_printer.cpp  operation_printer.hpp  wallet.cpp  wallet_account.inl  wallet_assets.inl  wallet_content.inl  wallet_general.inl  wallet_impl.cpp  wallet_impl.hpp  wallet_messaging.inl  wallet_mining.inl  wallet_monitoring.inl  wallet_proposals.inl  wallet_seeding.inl  wallet_subscription.inl  wallet_transaction_builder.inl  wallet_utility.cpp  wallet_wallet_file.inl
libraries/wallet_utility/: CMakeLists.txt  wallet_utility.cpp
programs/account_generator/: CMakeLists.txt  main.cpp
programs/build_helpers/: CMakeLists.txt  member_enumerator.cpp
programs/cli_wallet/: .ses_state  CMakeLists.txt  main.cpp
programs/decentd/: CMakeLists.txt  main.cpp  winsvc.cpp  winsvc.hpp
programs/delayed_node/: CMakeLists.txt  delayed_node_plugin.cpp  delayed_node_plugin.hpp  main.cpp
programs/genesis_util/: CMakeLists.txt  embed_genesis.cpp  genesis_update.cpp  get_dev_key.cpp
programs/gui_wallet/: CMakeLists.txt  DECENT.rc  Info.plist.in  README.md  build_and_run_gui_wallet.bat  build_and_run_gui_wallet.sh  desktop.icns  resource.h  resource.qrc  resource.rcc  resources.qrc  stdafx.cpp  stdafx.h
programs/gui_wallet/doc/: doc2.doc  gui_wallet.doc  mac.details.hist.html  mac.html
programs/gui_wallet/include/: debug_decent_application.h  decent_tool_fifo.hpp  (+7 more)
programs/js_operation_serializer/: CMakeLists.txt  main.cpp
programs/keys_generator/: CMakeLists.txt  main.cpp
programs/size_checker/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt
tests/app/: main.cpp
tests/benchmarks/: genesis_allocation.cpp
tests/common/: database_fixture.cpp  database_fixture.hpp  tempdir.cpp  tempdir.hpp
tests/encrypt/: test_encryption_utils.cpp
tests/generate_empty_blocks/: CMakeLists.txt  main.cpp
tests/intense/: block_tests.cpp
tests/package/: main.cpp  sandbox.cpp
tests/performance/: performance_tests.cpp
tests/tests/: authority_tests.cpp  basic_tests.cpp  block_tests.cpp  confidential_tests.cpp  database_tests.cpp  fee_tests.cpp  main.cpp  messaging_tests.cpp  operation_tests.cpp  operation_tests2.cpp  serialization_tests.cpp  uia_tests.cpp
(+401 files in other folders)
