add_subdirectory( contrib EXCLUDE_FROM_ALL )
add_subdirectory( db )
add_subdirectory( deterministic_openssl_rand )
add_subdirectory( encrypt )
add_subdirectory( chain )
add_subdirectory( egenesis )
add_subdirectory( net )
#add_subdirectory( p2p )
add_subdirectory( time )
add_subdirectory( utilities )
add_subdirectory( app )
add_subdirectory( package )
add_subdirectory( plugins )
add_subdirectory( wallet )
add_subdirectory( wallet_utility )
add_subdirectory( config )
if(UPDATE_MANAGER)
  add_subdirectory( update )
endif()

add_subdirectory( jsondiff )
add_subdirectory( uvm )

