add_subdirectory( contrib EXCLUDE_FROM_ALL )
add_subdirectory( db )
add_subdirectory( encrypt )
add_subdirectory( chain )
add_subdirectory( egenesis )
add_subdirectory( net )
add_subdirectory( utilities )
add_subdirectory( app )
add_subdirectory( package )
add_subdirectory( plugins )
add_subdirectory( wallet )
